fixed chat content scrollbar design

--- a/src/app/main-page/chat-container/chat-container.component.scss
+++ b/src/app/main-page/chat-container/chat-container.component.scss
@@ -14,7 +14,7 @@ app-chat-header {
 app-chat-content {
     @include scaleElement();
     @include dFlex(initial, center);
-    flex-direction: column;
+    flex-direction: column-reverse;
     margin-top: 8vh;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
